# conll

./: .merlin  CHANGES.md  META  Makefile  README  README.md  _tags  conll.opam  dune-project  opam
opam/: opam
src/: conll.ml  conll.mli  conll_types.ml  conll_types.mli  conllx.ml  conllx.mli  dep.ml  dune  utils.ml
src_tool/: conll_tool.ml  get_sentences.ml
tool/: Makefile  _tags
tool/src/: conll_tool.ml
